fixed cache, role management
