# api/docs/swagger.json
@@ -8,65 +8,14 @@
     },
     "basePath": "/",
     "paths": {
-        "/auth/login": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Authenticate user with username and password",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Login",
-                "parameters": [
-                    {
-                        "description": "Login credentials",
-                        "name": "admin",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.LoginReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "JWT tokens",
-                        "schema": {
-                            "$ref": "#/definitions/models.TokenRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request payload",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/profile": {
+        "/client/tenders": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get profile",
+                "description": "List Tender",
                 "consumes": [
                     "application/json"
                 ],
@@ -74,14 +23,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Tender"
                 ],
-                "summary": "Profile",
+                "summary": "List Tender",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Success list tenders",
                         "schema": {
-                            "$ref": "#/definitions/models.UserRes"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -97,16 +46,14 @@
                         }
                     }
                 }
-            }
-        },
-        "/auth/profile/delete": {
-            "delete": {
+            },
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Delete profile",
+                "description": "Create Tender",
                 "consumes": [
                     "application/json"
                 ],
@@ -114,12 +61,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Tender"
                 ],
-                "summary": "DeleteProfile",
+                "summary": "Create Tender",
+                "parameters": [
+                    {
+                        "description": "Create Tender",
+                        "name": "tender",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateTenderReq"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "Deleted profile",
+                    "201": {
+                        "description": "Create Tender",
                         "schema": {
                             "type": "string"
                         }
@@ -139,14 +97,14 @@
                 }
             }
         },
-        "/auth/profile/update": {
+        "/client/tenders/{id}": {
             "put": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Update profile",
+                "description": "Update Tender",
                 "consumes": [
                     "application/json"
                 ],
@@ -154,23 +112,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Tender"
                 ],
-                "summary": "UpdateProfile",
+                "summary": "Update Tender",
                 "parameters": [
                     {
-                        "description": "Update request",
-                        "name": "user",
+                        "type": "string",
+                        "description": "Tender ID",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "description": "Create Tender",
+                        "name": "tender",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateReq"
+                            "$ref": "#/definitions/models.UpdateStatus"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Updated profile",
+                        "description": "Tender status updated",
                         "schema": {
                             "type": "string"
                         }
@@ -188,19 +152,14 @@
                         }
                     }
                 }
-            }
-        },
-        "/auth/register": {
-            "post": {
+            },
+            "delete": {
                 "security": [
-                    {
-                        "BearerAuth": []
-                    },
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Register",
+                "description": "Delete Tender",
                 "consumes": [
                     "application/json"
                 ],
@@ -208,25 +167,22 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Tender"
                 ],
-                "summary": "Register",
+                "summary": "Delete Tender",
                 "parameters": [
                     {
-                        "description": "Registration request",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.RegisterReq"
-                        }
+                        "type": "string",
+                        "description": "Tender ID",
+                        "name": "id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "JWT tokens",
+                    "200": {
+                        "description": "Tender deleted successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.TokenRes"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -281,14 +237,9 @@
                 }
             }
         },
-        "/tender/create": {
+        "/login": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create Tender",
+                "description": "Authenticate user with username and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -296,25 +247,207 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Tender"
+                    "auth"
                 ],
-                "summary": "Create Tender",
+                "summary": "Login",
                 "parameters": [
                     {
-                        "description": "Create Tender",
+                        "description": "Login credentials",
                         "name": "admin",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Tender"
+                            "$ref": "#/definitions/models.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT tokens",
+                        "schema": {
+                            "$ref": "#/definitions/models.TokenRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/profile/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "DeleteProfile",
+                "responses": {
+                    "200": {
+                        "description": "Deleted profile",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/profile/update": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "UpdateProfile",
+                "parameters": [
+                    {
+                        "description": "Update request",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Updated profile",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Register",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "Registration request",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RegisterReq"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Create Tender",
+                        "description": "JWT tokens",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.TokenRes"
                         }
                     },
                     "400": {
@@ -334,6 +467,26 @@
         }
     },
     "definitions": {
+        "models.CreateTenderReq": {
+            "type": "object",
+            "properties": {
+                "budget": {
+                    "type": "number"
+                },
+                "deadline": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "file_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "models.LoginReq": {
             "type": "object",
             "properties": {
@@ -358,29 +511,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Tender": {
-            "type": "object",
-            "properties": {
-                "budget": {
-                    "type": "number"
-                },
-                "client_id": {
-                    "type": "string"
-                },
-                "deadline": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
@@ -412,6 +542,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateStatus": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
